# tig

./: .gitignore  README.md  pyproject.toml
animations/: branch.py  merge.py
app/: cat_file.py  ls_files.py  show_ref.py  verify_pack.py
src/tig/core/: repository.py
